# GenshinAutoV2

./: .gitignore  CMakeLists.txt  README.md
lib/: quickjs.def  quickjs.lib
res/: manifest.xml  res.rc
src/: api.js  console.cpp  console.utils.c  console.utils.h  js.api.c  js.api.h  js.api.utils.h  main.c  main.cpp  quickjs.cpp  script.js  utils.js  win.utils.c  win.utils.cpp  win.utils.h
